# optlib

./: README.md
optlib-1.1.3/: CMakeLists.txt  INSTALL  README  copyright.txt  license.txt
optlib-1.1.3/docs/: optlib_manual.txt
optlib-1.1.3/examples/: data.txt  datafit.c  large_n.c  ol_constraints.c  projectile.c  simsurface.c  simsurface_mpi.c
optlib-1.1.3/src/: CMakeLists.txt  Makefile_old  func.c  func.h  ol_config.h.in  ol_driver_mpi.c  ol_driver_serial.c  ol_fw_mpi.c  ol_fw_mpi.h  ol_genetic_alg.c  ol_genetic_alg.h  ol_interp.c  ol_interp.h  ol_mem.c  ol_mem.h  ol_powell.c  ol_powell.h  ol_rand_tools.c  ol_rand_tools.h  ol_simanneal.c  ol_simanneal.h  ol_transform.c  ol_transform.h  optlib.c  optlib.h  optlib_mpi.h
